; ModuleID = '/home/carl/AnghaBench/jemalloc/src/extr_pages.c_pages_huge_impl.c'
source_filename = "/home/carl/AnghaBench/jemalloc/src/extr_pages.c_pages_huge_impl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MADV_HUGEPAGE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i64, i32)* @pages_huge_impl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pages_huge_impl(i8* %0, i64 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  %8 = icmp ne i32 %7, 0
  br i1 %8, label %9, label %22

9:                                                ; preds = %3
  %10 = load i8*, i8** %4, align 8
  %11 = call i8* @HUGEPAGE_ADDR2BASE(i8* %10)
  %12 = load i8*, i8** %4, align 8
  %13 = icmp eq i8* %11, %12
  %14 = zext i1 %13 to i32
  %15 = call i32 @assert(i32 %14)
  %16 = load i64, i64* %5, align 8
  %17 = call i64 @HUGEPAGE_CEILING(i64 %16)
  %18 = load i64, i64* %5, align 8
  %19 = icmp eq i64 %17, %18
  %20 = zext i1 %19 to i32
  %21 = call i32 @assert(i32 %20)
  br label %22

22:                                               ; preds = %9, %3
  ret i32 1
}

declare dso_local i32 @assert(i32) #1

declare dso_local i8* @HUGEPAGE_ADDR2BASE(i8*) #1

declare dso_local i64 @HUGEPAGE_CEILING(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
